objects/FieloEE__RuleCriteria__c.object
<CustomObject>
    <description>Criteria to be met by a transaction for a rule to be applied.</description>
    <fields>
        <fullName>FieloEE__BooleanValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__DateValue__c</fullName>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloEE__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__FieldName__c</fullName>
        <label>Field Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__FieldType__c</fullName>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>String</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Name__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + Id, FieloEE__FieldName__c + &apos; &apos; +   Text(FieloEE__Operator__c ) + &apos; &apos; +  FieloEE__Values__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__NumberValue__c</fullName>
        <label>Number Value</label>
        <precision>16</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equal</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equal</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>not contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Rule__c</fullName>
        <label>Rule</label>
        <referenceTo>FieloEE__Rule__c</referenceTo>
        <relationshipLabel>Rule Criterias</relationshipLabel>
        <relationshipName>RuleCriterias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloEE__Values__c</fullName>
        <label>Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Rule Criteria</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FieloEE__Empty_Field_Criteria</fullName>
        <active>true</active>
        <errorConditionFormula>FieloEE__Field__c &amp;&amp; ISBLANK( FieloEE__Values__c )</errorConditionFormula>
        <errorMessage>The criteria must have a field selected</errorMessage>
    </validationRules>
</CustomObject>